<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_theme">

    <TextView
        android:text="@string/app_name"
        style="@style/home_title" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="400dp">

    <Button
        android:id="@+id/home_weather"
        android:text="@string/home_weather"
        style="@style/home_imgbut" />

    <Button
        android:id="@+id/home_cook"
        android:text="@string/home_cook"
        style="@style/home_imgbut" />

    <Button
        android:text="@string/home_news"
        android:id="@+id/home_news"
        style="@style/home_imgbut"/>

    <Button
        android:text="@string/home_note"
        android:id="@+id/home_note"
        style="@style/home_imgbut" />
    </LinearLayout>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/music_open"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="20dp"
    />

</RelativeLayout>